--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@angular/compiler": "~11.2.6",
     "@angular/core": "~11.2.6",
     "@angular/forms": "~11.2.6",
+    "@angular/localize": "~11.2.6",
     "@angular/material": "^11.2.5",
     "@angular/platform-browser": "~11.2.6",
     "@angular/platform-browser-dynamic": "~11.2.6",
     "@angular/router": "~11.2.6",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "angular-webstorage-service": "^1.0.2",
+    "bootstrap": "^4.6.0",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
