--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "angular-webstorage-service": "^1.0.2",
     "bootstrap": "^4.6.0",
+    "moment": "^2.29.1",
+    "ngx-moment": "^5.0.0",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
